# performance_benchmarking

./: .gitattributes  .gitignore  LICENSE  README.md  app.yml  databricks.yml  package.json  pyproject.toml  requirements.txt  setup.py  tsconfig.json
.claude/skills/apx/: SKILL.md
.cursor/rules/: project.mdc
src/: benchmark_llm.py  compare_endpoints.py  compare_multi_endpoints.py  generate_pdf_report.py  generate_summary_stats.py
src/llm_benchmark_app/backend/: app.py  benchmark_router.py  core.py  models.py
src/llm_benchmark_app/backend/benchmark/: __init__.py  db.py  engine.py  report.py  stats.py
src/llm_benchmark_app/ui/: index.html
src/llm_benchmark_app/ui/components/benchmark/: benchmark-charts.tsx  chip-input.tsx  config-panel.tsx  endpoint-selector.tsx  results-panel.tsx
src/llm_benchmark_app/ui/routes/: index.tsx
utils/: check_activity.sh  generate_report.sh  monitor_live.py
